<resources>
    <string name="app_name">Sajo</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="organisation">Organisation</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="student">Student</string>
    <string name="login">LOGIN</string>
    <string name="password2">Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="your_interests">Your interests</string>
    <string name="volunteering">Volunteering</string>
    <string name="internships">Internships</string>
    <string name="events_around_you">Events around you</string>
    <string name="sign_up">Sign up</string>
    <string name="login_icon">login_icon</string>
    <string name="competitions">Competitions</string>
    <string name="school_scholarships">School scholarships</string>
    <string name="travel_opportunities">Travel opportunities</string>
    <string name="opportunities_in_art">Opportunities in art</string>
    <string name="opportunities_in_sport">Opportunities in sport</string>
    <string name="opportunities_in_tech">Opportunities in tech</string>
    <string name="trainings">Trainings</string>
    <string name="logo">Logo</string>
    <string name="name_of_organisation_or_company">Name of organisation or company</string>
    <string name="title_activity_student_dashboard">StudentDashboardActivity</string>


    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_notifications">Notifications</string>
    <string name="header">header</string>
    <string name="about">ABOUT</string>
    <string name="feedback">YOUR FEEDBACK</string>
    <string name="visit_site">VISIT OUR SITE</string>
    <string name="categories">Categories</string>
    <string name="intern">internships</string>
    <string name="train">trainings</string>
    <string name="tech">tech</string>
    <string name="intern2">internships</string>
    <string name="train2">trainings</string>
    <string name="tech2">tech</string>
    <string name="opportunities_for_you">Opportunities for you</string>
    <string name="welcome_to_sajo_and_description">welcome to sajo and description.</string>
    <string name="clickrate">clickrate</string>
    <string name="save">save</string>
    <string name="reportpost">reportpost</string>
    <string name="name_of_organisation">Name of organisation</string>
    <string name="org_dp">org_dp</string>
    <string name="org_dp2">org_dp</string>
    <string name="post_des">long text &#8230; lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum. /n lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum.</string>
    <string name="drop_a_message">Drop a message</string>
    <string name="postview">postview</string>
    <string name="post_title">McDonald\'s</string>
    <string name="title_desc">Post description goes here with link to the main post &#8230;</string>
    <string name="more">more</string>
    <string name="our_aim">SAJO App helps high school graduates get easier access to opportunities from partnered organizations/companies, such as to grow their skills, experience and earn money. High school graduates can intern with, volunteer for, or work in person or remotely with an organization/company. Virtual and non-virtual training are also opened for them to learn soft and hard skills. Users without smartphones can freely subscribe on our website to get SMS messages on opportunities related to their interests.
This is to build their portfolios, as well as their productivity skills.
</string>
    <string name="feedback_text">This is a beta android version of sajo, we need your feedback to improve on or change some features, to ensure that you enjoy using sajo. Please do well to leave a feedback. Thank you!</string>
    <string name="feedback_image">conversation image</string>
    <string name="feedback_form">type your feedback here</string>
    <string name="login_bg">login_bg</string>
    <string name="conversation_image">conversation image</string>
    <string name="image_select">Select an image from your device</string>
    <string name="no_image">No image? type the first initial for the category your post is about.</string>
    <string name="type_here">Type here</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="guide">Create an easy to understand post. Include link to a form, survey or website if there\'s any. Is it a paid job? State your price and expectations.</string>
    <string name="cancel">Cancel</string>
    <string name="posts_by_you">posts by you</string>
    <string name="name_of_organisation_and_brief_description_of_the_post">Name of organisation and brief description of the post.</string>
    <string name="older_posts_view">older posts view</string>
    <string name="post_views">post views</string>
    <string name="_123">123</string>
    <string name="delete_post">delete post</string>
    <string name="orglogo">orglogo</string>
    <string name="bglogo">bglogo</string>
    <string name="camera">camera</string>
    <string name="imageview">imageview</string>
    <string name="details_for_notify">You got accepted to attend NYA Meetup</string>
    <string name="star">star</string>
    <string name="brief_description_of_what_you_do">Brief description of what you do.</string>
    <string name="title_activity_studentdash">Studentdash</string>
    <string name="title_dashboard">Dashboard</string>
</resources>
