<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="240dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:appCompat="http://schemas.android.com/tools"
    android:layout_marginLeft="26dp"
    android:layout_marginRight="26dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/featured_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/display_img"
            android:contentDescription="@string/older_posts_view"/>

        <TextView
            android:id="@+id/featured_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/post_title"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorOn"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/featured_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_desc"
        android:padding="5dp"
        android:layout_marginTop="130dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            appCompat:src="@drawable/ic_visibility"
            android:paddingBottom="5dp"
            android:contentDescription="@string/post_views"/>

        <TextView
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_123"
            android:textColor="@color/colorOn"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/delete_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            appCompat:src="@drawable/ic_delete"
            android:layout_marginStart="100dp"
            android:paddingBottom="5dp"
            android:tint="#C4C4C4"
            android:contentDescription="@string/delete_post"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
