<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_review"
        android:contentDescription="@string/feedback_image"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_text"
        android:padding="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_light"
        android:layout_gravity="center"
        android:textColor="@color/colorOn"/>

    <EditText
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="100dp"
        android:background="@drawable/comment_shape"
        android:drawableEnd="@drawable/ic_send"
        android:hint="@string/feedback_form"
        android:inputType="text"
        android:importantForAutofill="no" tools:targetApi="o"/>



</LinearLayout>