<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="38dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_star"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/clickrate"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_like"
            android:layout_marginTop="8dp"
            android:layout_marginStart="43dp"
            android:contentDescription="@string/save"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_more_vert"
            android:layout_marginTop="8dp"
            android:layout_marginStart="43dp"
            android:contentDescription="@string/reportpost"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>