<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    style="@style/LoginTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/oval"
            android:contentDescription="login_bg" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?actionBarSize"
            android:text="@string/login"
            android:fontFamily="Open Sans"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:fontFamily="@font/quicksand_light"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="20sp"
            android:autofillHints="email"
            tools:targetApi="o"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/quicksand_light"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="17dp"
            android:textColor="#fff"
            android:textColorHint="#C4C4C4"
            android:autofillHints="******"
            tools:targetApi="o"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="50dp"
            android:paddingEnd="25dp"
            android:paddingStart="0dp"
            app:srcCompat="@drawable/ic_arrow_forward"
            android:visibility="visible"
            android:contentDescription="@string/login_icon" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="17sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:text="@string/student"
                android:onClick="regStudent"
                android:textColor="#fff"
                android:background="@drawable/btn_style"
                android:layout_marginEnd="20dp"/>
            <Button
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:text="@string/organisation"
                android:onClick="gotoreg"
                android:textColor="#fff"
                android:background="@drawable/btn_style"
                android:layout_marginEnd="20dp"
               />
    </LinearLayout>

    </LinearLayout>



</RelativeLayout>